--- a/index.html
+++ b/index.html
@@ -1,5 +1,109 @@
-<html>
+body {
+  background-color: #129C89;
+ 
+}
 
-<body>
+H1{
+  text-align: center;
+  color: #2CDAF9;
+  font-size: 500%;
+  font-family: sans-serif;
+}
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  align: center;
+  padding: 10px;
+}
+p{
+  margin-right: 10%;
+  margin-left: 10%;
+  display: block;
+  text-align: left;
+  font-size: 150%;
+  color: white;
+}
+table, th, td {
+  border: 2px solid black;
+  border-collapse: collapse;
+  padding: 5px;
+ 
+  
+}
+a:link {
+  color: purple;
+  background-color: none;
+  text-decoration: underline;
+}
 
-<img src="https://vignette.wikia.nocookie.net/dayshift-at-freddys/images/9/94/DoggoInfobox.png/revision/latest?cb=20181113014231" id="doggo">
+input {
+  
+ 
+  
+}
+
+<body style>
+  <H1> Types of Surfboards </H1>
+
+  
+  <img
+
+src=       "https://totalsurfcamp.com/sites/default/files/types-of-surfboards.jpg" width= "1100px" >
+  </img>
+
+  <p> There are many types of surfboards that people use. There are 3 main categories of Surfboards; Longboards, Shortboards, and Funboards. Although, there are many subcategories of each style. Each Board is designed the way it is for a specific type of surfing. For example, beginners would find it much easier to ride a longboard, because it is easy to keep your balance and easy to catch waves with a longer board, but professional surfers almost alwats prefer shortboards, because they are lighter and easier to turn and do tricks with. </p>  
+<img src=
+     "https://gorillasafe2.files.wordpress.com/2017/03/types-of-surfboards1.png?w=820" width="500" >
+</img>
+  <p> Above is a couple different types of boards that people buy. A fish board, recognized by its inverted tail, is very popular among experienced surfers who like shortboards. There are many types of boards that are made for surfers with different experience. There are many places around San Diego where you can find different surfboards. Here is one local surf-shop called <a href="https://www.rustydelmar.com/"> Rusty Del Mar. </a> </p>
+<img src="https://media.giphy.com/media/5nh8FKSRtxFEyuajGc/giphy.gif" alt="Surfing Gif" style="width:500px;height:300px;" border= 5px;>
+<img
+     src="http://giphygifs.s3.amazonaws.com/media/FlL27X97Xz3Py/giphy.gif" alt="surfer" style="width:500px;height:300px;" border= 5px;>
+
+<table style="width:100%">
+  <tr>
+    <th>Type of board</th>
+    <th>Length</th>
+    <th>Skill Level</th>
+  </tr>
+  <tr>
+    <td>Longboard</td>
+    <td>9-12 ft</td>
+    <td>Beginner</td>
+  </tr>
+  <tr>
+    <td>Funboard</td>
+    <td>7-9 ft</td>
+    <td>Moderate</td>
+  </tr>
+  <tr>
+    <td>Egg</td>
+    <td>6-8.5 ft</td>
+    <td>Moderate</td>
+  </tr>
+  <tr>
+    <td>Hybrid</td>
+    <td>5-7 ft</td>
+    <td>Intermediate</td>
+  </tr>
+  <tr>
+    <td>Shortboard</td>
+    <td>5-7 ft</td>
+    <td>Proficient</td>
+  </tr>
+  <tr>
+    <td>Fish</td>
+    <td>5-7 ft</td>
+    <td>Advanced</td>
+  </tr>
+  
+  <p> <label>Which Board is your favorite?</label>
+          <input type = "text"
+                 id = "myText"
+                 value = "" />
+    <p>
+</table>
+  
+  
+</body>
