--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
+<!DOCTYPE html>
+
+<html>
+  <head>
+    <LINK href = "style.css" rel="stylesheet"type=" text/css">
+      </head>
+
+
 <body style>
   <H1> Types of Surfboards </H1>
 
