--- a/index.html
+++ b/index.html
@@ -4,7 +4,14 @@
   <head>
     <LINK href = "style.css" rel="stylesheet"type=" text/css">
       </head>
-
+<ul>
+  <li><a href="default.asp">Home</a></li>
+  <li><a href="news.asp">News</a></li>
+  <li><a href="contact.asp">Contact</a></li>
+  <li><a href="about.asp">About</a></li>
+   
+  
+  </ul>
 
 <body style>
   <H1> Types of Surfboards </H1>
