--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <LINK href = "style.css" rel="stylesheet"type=" text/css">
       </head>
 <ul>
-  <li><a href="project.html">Home</a></li>
+  <li><a href="https://funwithferrets.weebly.com/">Home</a></li>
   <li><a href="news.asp">News</a></li>
   <li><a href="contact.asp">Contact</a></li>
   <li><a href="about.asp">About</a></li>
