--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
     <LINK href = "style.css" rel="stylesheet"type=" text/css">
       </head>
 <ul>
-  <li><a href="projects.html">Home</a></li>
-  <li><a href="news.asp">News</a></li>
-  <li><a href="contact.asp">Contact</a></li>
+  <li><a href="index.html">Home</a></li>
+  <li><a href="projects.html">Project</a></li>
   <li><a href="about.asp">About</a></li>
    
   
