--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <html>
- <body style>
+ <body> <style>
   <H1> Jackson Kitts </H1>
 <ul>
   <li><a href="default.asp">Home</a></li>
@@ -36,5 +36,5 @@ src=       "https://previews.dropbox.com/p/thumb/AAplmX2LbBmfulIzhL3gph4lY06SGUW
     <p> Scroll to the top of the page to see all of my computer science Programs!
 </p>
   
-  
+</style>
 </body>
