--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <html>
- <body> <style>
+ <body style>
   <H1> Jackson Kitts </H1>
 <ul>
   <li><a href="default.asp">Home</a></li>
