--- a/index.html
+++ b/index.html
@@ -36,5 +36,5 @@ src=       "https://previews.dropbox.com/p/thumb/AAplmX2LbBmfulIzhL3gph4lY06SGUW
     <p> Scroll to the top of the page to see all of my computer science Programs!
 </p>
   
-</style>
-</body>
+
+</body style>
