--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <html>
- <body style>
+ <body>
   <H1> Jackson Kitts </H1>
 <ul>
   <li><a href="default.asp">Home</a></li>
@@ -37,4 +37,4 @@ src=       "https://previews.dropbox.com/p/thumb/AAplmX2LbBmfulIzhL3gph4lY06SGUW
 </p>
   
 
-</body style>
+</body>
