--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html>
  <body>
   <H1> Jackson Kitts </H1>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 <ul>
   <li><a href="default.asp">Home</a></li>
   <li><a href="https://studio.code.org/projects/applab/5DLT4HBoZjcPTRgW7TLl6KTytsstF05vGPe9JvLy0h4">My favorite Things</a></li>
